# CourseWork2

./: .coveragerc  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: baseapi.py  basevacancy.py  hh_api.py  jsonsaver.py  vacancies.py
tests/: test_hh_api.py  test_jsonsaver.py  test_vacancies.py
